Avatars/Ingress.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: drawio-ingress

  labels:
    wan-mode: 'public'
    lan-mode: 'private'

spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: main-gw
      namespace: kuadrant-core-prod

  hostnames:
    - 'avatar.mylogin.space'
  rules:
    - backendRefs:
        - name: avatars-ui
          port: 80
